--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ioccc-submit-tool
-version = 0.1.0
+version = 0.1.4
 author = Landon Noll
 author_email = judges@ioccc.org
 url = https://github.com/ioccc-src/submit-tool
@@ -10,7 +10,9 @@ long_description_content_type= text/markdown
 license = BSD 3-Clause License
 
 [options]
-packages = submittool
+packages = find:
+package_dir =
+   = src
 python_requires = >=3.8
 install_requires =
    authlib>=1.3.2
@@ -21,12 +23,12 @@ install_requires =
    pwnedpasswords>=2.0.0
    werkzeug>=3.0.3
 
-include_package_data =  True
+[options.packages.find]
+where = src
 
 [options.package_data]
-
 submittool =
-   etc/*
    templates/*
+   etc/*
    static/*
 
