minor update to setup.cfg
version = 0.1.7
author = IOCCC Judges
author_email = https://www.ioccc.org/judges.html

We publish a URL of our Email so that spammers have to work at it,
and so real people can see how best to contact of the IOCCC judges.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = ioccc-submit-tool
-version = 0.1.6
-author = Landon Noll
-author_email = judges@ioccc.org
+version = 0.1.7
+author = IOCCC Judges
+author_email = https://www.ioccc.org/judges.html
 url = https://github.com/ioccc-src/submit-tool
 description = IOCCC submit server
 long_description = file:README.md
