--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,6 @@ where = src
 
 [options.package_data]
 submittool =
-   templates/*
-   etc/*
-   static/*
-
+   ../templates/*
+   ../etc/*
+   ../static/*
