--- a/template.setup.cfg
+++ b/template.setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ioccc-submit-tool
-version = 0.1.7
+version = @@VERSION@@
 author = IOCCC Judges
 author_email = https://www.ioccc.org/judges.html
 url = https://github.com/ioccc-src/submit-tool
