improve Makefile, restore bin, etc, templates, static
We improve the `Makefile` so that `make all` builds everything
that is needed for the ioccc_submit_tool python wheel package.

The contents of `etc/` `templates/` and `static/` have been restored.
The ioccc_submit_tool python wheel package no longer includes
content from `etc/` `templates/` and `static/`.

The files that were under `src/submittool/` have been put back into
`bin/` as the make rules create files under `src/submittool/` as needed.

Renamed `template.setup.cfg` to `setup.cfg.template` so that
`setup.cfg` is built from `setup.cfg.template` and `requirements.txt`.

Tested `make clobber all` followed by `make all`.

TODO: Fold the setup branch into the master branch.

TODO: Update `README.md` as needed according to the above.

TODO: Write the `make install` rule for that on submit.ioccc.org,
      it will install both the ioccc_submit_tool python wheel package
      as well as the `etc/` `templates/` and `static/` files in
      places needed by the web server.

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,7 @@ etc/state.json
 ioccc_submit_tool.egg-info/
 __pycache__/
 setup.cfg
-src/etc/iocccpasswd.json
-src/etc/.secret
-src/etc/state.json
-src/ioccc_submit_tool.egg-info
+src/
 .*.sw[a-zA-Z]
+users/
 venv/
