exclude account level dot files, test bin file

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,29 @@
 ?
 .DS_Store
 NOTES/
+.bash_history
+.bash_profile
+.bashrc
+bin/myapp.wsgi
 build/
+.cache/
 dist/
 etc/iocccpasswd.json
 etc/.secret
 etc/state.json
+.gitconfig
 ioccc_submit_tool.egg-info/
+.ipython/
+.lesshst
 __pycache__/
+.pylint.d/
+.python_history
 setup.cfg
 src/
+.ssh/
 .*.sw[a-zA-Z]
 users/
 venv/
+.vim/
+.viminfo
+.vimrc
