checkpoint - debug with Eliot
Renamed ioccc_submit_tool to `iocccsubmit`.

Changed `Makefile` iocccsubmit VERSION from 0.1.7
to 0.1.9.

Changed use of `src/submittool/` to `iocccsubmit/`.  When loading source
under `iocccsubmit/`, we also `chmod 0555 iocccsubmit/*.py`.

Clobber removes `iocccsubmit/` and `iocccsubmit.egg-info/` instead of `src/`.

Changed `application.config['FLASH_APP']` to use "iocccsubmit".
Changed `bin/ioccc.wsgi` accordingly.

Removed problematic and unused/not-needed requirements from `etc/requirements.txt`.

Greatly simplify `setup.cfg.template` (and thus the `setup.cfg` that is built)
to just set `packages = iocccsubmit`.   Removed use of find and the unused
package data.

Produced an initial `bin/__init__.py`.

Update `.gitignore` accordingly.

Tested the above with `make clobber all venv_install` on macOS.

Tested the above by building and installing and importing by hand, as root, `iocccsubmit`.

TODO: Test using `make clobber all venv_install` and `make install` on submit.ioccc.org.

TODO: Build a proper `bin/__init__.py` file by learning about `__init__.py`.

TODO: Allow apache to run the application.

TODO: Adjust `make install` to load files such as those under `etc/`, `templates/`,
      and `static/` in a place where the apache server can use them.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ etc/iocccpasswd.json
 etc/.secret
 etc/state.json
 .gitconfig
+iocccsubmit/
+iocccsubmit.egg-info/
 ioccc_submit_tool.egg-info/
 .ipython/
 .lesshst
@@ -20,7 +22,6 @@ __pycache__/
 .pylint.d/
 .python_history
 setup.cfg
-src/
 .ssh/
 .*.sw[a-zA-Z]
 users/
