add make root_install, improve import and __init__.py
Renamed ioccc_submit_tool to iocccsubmit.

Moved `bin/*.py` module code under `iocccsubmit/`
so that the build process does not need to move it
and so that python import of iocccsubmit will work.

Build a `bin/__init__.py` file that imports all
of the external symbols form `iocccsubmit/ioccc_common.py`
and application from `iocccsubmit/ioccc.py`.

Added `static/favicon.ico` and `static/robots.txt`.

Added `make root_install` rule to install on submit.ioccc.org,
as root, the proper files and permissions.
Added makefile symbols that list files under `etc/`, `templates/`, and
under `static/` that need to be installed via `make root_install`.
Added rules to also install `robots.txt` and `favicon.ico`.

Improve messages echoed by `make venv_install` and `make install`.

Added use of the `Makefile` variable `PKG_NAME` to set `iocccsubmit`
as the package name.

Moved `sbin/` code back under `bin/`.

Update `.gitignore` to not ignore `iocccsubmit/`.
Update `.gitignore` to ignore `__pycache__`.
Clean out old exclusions from `.gitignore`.

Adjusted `bin/pychk.sh` to account for the above.
Changed use of `pylint` in `bin/pychk.sh` to use of `python3 -m pylint`.
Check python code in under `iocccsubmit/` before under `bin/`.
Removed need for using `--source-roots bin` during pylint.

For all python code under `bin/*.py`, replaced wildcard import of
ioccc_common with `from iocccsubmit import` of specific module parts.

Removed pylint disable lines from python code that were no longer
applicable: in part due to the changes above.

Install via `python3 -m pip install --upgrade` in one command,
the modules needed to build the virtual environment, and
then `python3 -m pip install` the requirements from `etc/requirements.txt`.

Moved `bin/ioccc.wsgi` to `wsgi/ioccc.wsgi`.
Changed `uwsgi.ini` to refer to `wsgi/ioccc.wsgi`.

Changed `bin/pychk.sh` VERSION from "1.1 2024-12-04"
to "1.2 2024-12-13".

Changed `iocccsubmit/ioccc.py` VERS

--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,17 @@
 ?
 .DS_Store
 NOTES/
-.bash_history
-.bash_profile
-.bashrc
 bin/myapp.wsgi
 build/
-.cache/
 dist/
 etc/iocccpasswd.json
 etc/.secret
 etc/state.json
 .gitconfig
-iocccsubmit/
 iocccsubmit.egg-info/
 ioccc_submit_tool.egg-info/
-.ipython/
-.lesshst
-__pycache__/
-.pylint.d/
-.python_history
+__pycache__
 setup.cfg
-.ssh/
 .*.sw[a-zA-Z]
 users/
 venv/
