checkpoint use a Pwned password tree
We no longer use 'pwnedpasswords` module but instead use a Pwned password tree
installed on the filesystem from the `pwned-pw-download` tool
from the [pwned-pw-download repo](https://github.com/lcn2/pwned-pw-download).

We first check if `./pwned.pw.tree` is a directory (or symlink to a directory),
then `APPDIR/pwned.pw.tree` (where APPDIR is the application directroy value),
otherwise assume `/usr/local/share/pwned.pw.tree`.

Added `is_pw_pwned(password)` to `iocccsubmit/ioccc_common.py` to determine
if a password has been Pwned by doing a lookup in the Pwned password tree.

Added `STARTUP_CWD` to `iocccsubmit/ioccc_common.py` to record the full path
of the startup directory.

Use the variable `errcode` as where an error message from things such as
`except OSError as errcode` are done: avoiding the potential conflict or
confusion with the "Exception reserved word".

Fixed a number of problems with "try / except" error messages and
return values in  `iocccsubmit/ioccc_common.py`.

Changed `iocccsubmit/ioccc_common.py` VERSION_IOCCC_COMMON from "2.0.0 2024-12-16"
to "2.1.0 2024-12-18"

Added `pwned.pw.tree` to `.gitignore` as any Pwned password tree is
not part of this repo.

Tested the above with `make clobber all install` on macOS.

TODO: Test setup on submit.ioccc.org forced password change.

TODO: Add application rate limits.

TODO: Add application logging.

TODO: Set `application.debug` to `False` in `iocccsubmit/ioccc.py`.
      Set `application.config['FLASK_ENV']` to `production`.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ etc/state.json
 .gitconfig
 iocccsubmit.egg-info/
 ioccc_submit_tool.egg-info/
+pwned.pw.tree
 __pycache__
 setup.cfg
 .*.sw[a-zA-Z]
